# mission-manager

./: .gitignore  Dockerfile  README.md  client_drone_client.key  compose.yaml  pyproject.toml  run_everything.sh  run_format_and_lint.sh  run_locally.sh  run_test.sh
manager/: __main__.py  config.py  drone.py  map.html
manager/api_requests/: api_requests.py
manager/decision/: decision.py  detector_decision.py  mock_decision.py
manager/decision/camera/: camera.py  gphoto_camera.py  mock_camera.py
manager/mission/: mission.py  path.py  waypoint.py
manager/scripts/: consume.py  draw_path.py
manager/telemetry/: encryption.py  kafka_connection.py  sent_timestamps.py
manager/test/: test_check_path.py  test_detection.py  test_mission.py  test_path.py  test_wp_creation.py
mission-manager/: __main__.py  config.py  drone.py
mission-manager/api_requests/: api_requests.py
mission-manager/mission/: path.py  waypoint.py
mission-manager/scripts/: consume.py  draw_path.py
mission-manager/telemetry/: kafka_connection.py
mission-manager/test/: draw_path.py  test_path.py  test_wp_creation.py
simulation/: Dockerfile
